--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>About Me</title>
 </head>
 <body>
-    <h1>Hello world, I am 2666991 <YOUR-STUDENT-ID></h1>
+    <h1>Hello world, I am 2666991 </h1>
 </body>
 </html>
