--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello world, I am 2666991 </h1>
+    <nav>
+        <a href= "2666991-lab2.html"> My Portfolio Page </a>
+    </nav>
 </body>
 </html>
